--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "new",
   "type": "module",
   "version": "1.0.0",
+  "bin": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "start": "node dist/index.js"
+  },
   "dependencies": {
+    "chalk": "^5.0.1",
+    "execa": "^6.1.0",
     "inquirer": "^9.1.0",
     "yargs": "^17.5.1"
   },
