--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "version": "1.0.0",
   "bin": "dist/index.js",
+  "homepage": "https://github.com/cjcarrick/ts-cli",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
