--- a/package.json
+++ b/package.json
@@ -2,23 +2,39 @@
   "name": "@cjcarrick/ts-cli",
   "type": "module",
   "license": "MIT",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "bin": "dist/index.js",
   "homepage": "https://github.com/cjcarrick/ts-cli",
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "useTabs": false,
+    "tabWidth": 2,
+    "printWidth": 80,
+    "arrowParens": "avoid"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "start": "node dist/index.js"
+    "start": "node --enable-source-maps --experimental-specifier-resolution=node dist/index.js"
   },
   "dependencies": {
     "chalk": "^5.0.1",
+    "command-exists": "^1.2.9",
     "execa": "^6.1.0",
     "inquirer": "^9.1.0",
+    "prettier": "^2.7.1",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
+    "@schemastore/package": "^0.0.6",
+    "@types/command-exists": "^1.2.0",
     "@types/inquirer": "^9.0.0",
     "@types/node": "^18.7.3",
-    "@types/yargs": "^17.0.11"
+    "@types/prettier": "^2.7.1",
+    "@types/yargs": "^17.0.11",
+    "prettier-plugin-organize-imports": "^3.1.1",
+    "typescript": "^4.8.4"
   }
 }
