--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@cjcarrick/ts-cli",
   "type": "module",
   "license": "MIT",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "bin": "dist/index.js",
   "homepage": "https://github.com/cjcarrick/ts-cli",
   "prettier": {
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "start": "node --enable-source-maps --experimental-specifier-resolution=node dist/index.js"
+    "start": "node --enable-source-maps dist/index.js"
   },
   "dependencies": {
     "chalk": "^5.0.1",
